--- a/config/en-macros.dtsi
+++ b/config/en-macros.dtsi
@@ -4,7 +4,6 @@
         
       // Character à
       a_gr: a_gr {
-          label = "a_gr";
           compatible = "zmk,behavior-macro";
           #binding-cells = <0>;
           bindings = <&kp LEFT_ALT>, <&kp 0>, <&kp 2>, <&kp 2>, <&kp 4>;
@@ -12,7 +11,6 @@
         
       // Character è
       e_gr: e_gr {
-          label = "e_gr";
           compatible = "zmk,behavior-macro";
           #binding-cells = <0>;
           bindings = <&kp LEFT_ALT>, <&kp 0>, <&kp 2>, <&kp 3>, <&kp 2>;
@@ -20,7 +18,6 @@
         
       // Character ì
       i_gr: i_gr {
-          label = "i_gr";
           compatible = "zmk,behavior-macro";
           #binding-cells = <0>;
           bindings = <&kp LEFT_ALT>, <&kp 0>, <&kp 2>, <&kp 3>, <&kp 6>;
@@ -28,7 +25,6 @@
         
       // Character ò
       o_gr: o_gr {
-          label = "o_gr";
           compatible = "zmk,behavior-macro";
           #binding-cells = <0>;
           bindings = <&kp LEFT_ALT>, <&kp 0>, <&kp 2>, <&kp 4>, <&kp 2>;
@@ -36,7 +32,6 @@
         
       // Character ù
       u_gr: u_gr {
-          label = "u_gr";
           compatible = "zmk,behavior-macro";
           #binding-cells = <0>;
           bindings = <&kp LEFT_ALT>, <&kp 0>, <&kp 2>, <&kp 4>, <&kp 9>;
@@ -44,8 +39,8 @@
 
       // Character é 
       e_ac: e_ac {
-          label = "e_ac";
           compatible = "zmk,behavior-macro";
+          #binding-cells = <0>;
           bindings = <&kp LEFT_ALT>, <&kp 0>, <&kp 2>, <&kp 3>, <&kp 3>;
       };
         
